--- a/Last_1.tex
+++ b/Last_1.tex
@@ -249,15 +249,15 @@ In our application, we use the graphical model to design the multivariate distri
   
 
 
-%
-%
-%
-%\begin{figure}[t!]
-%\centering
-%  \includegraphics[width=3.5in]{Contour_AI}
-%\caption{Non-parametric bivariate distribution of dew point and dry bulb is represented. Two random variable show high correlation, which makes  weather scenario generation from joint density of these variable more convincing.}
-%\label{Dependency}       % Give a unique label
-%\end{figure}
+
+
+
+\begin{figure}[t!]
+\centering
+  \includegraphics[width=3.5in]{Contour_AI}
+\caption{Non-parametric bivariate distribution of dew point and dry bulb is represented. Two random variable show high correlation, which makes  weather scenario generation from joint density of these variable more convincing.}
+\label{Dependency}       % Give a unique label
+\end{figure}
 
 
 
