--- a/Last_1.tex
+++ b/Last_1.tex
@@ -123,7 +123,7 @@ Gibbs sampling, Stochastic cooperative game theory, Distribution network expansi
 % --------------------- Why we have to forecast the load? 
 
 \subsubsection{Current}
-\textcolor{teal}{The distribution should be expanded to accept the pear-to-pear transaction, distributed generated renewable energy sources (RES), and storage systems.}
+\textcolor{teal}{The distribution should be expanded to accept the pear-to-pear transaction, distributed generated renewable energy sources (RES), and storage systems. Grid-modernization is weighted and RES penetrates into distribution, that is a post-transmission in decentralized form. In the past, consumers were simply main users of electricity in electricity market, and in the current energy market, where RES penetrated, they were placed in compatible position to produce and sell energy. Since existing unidirectional network cannot accomdate this compatible energy flow, it is necessary to expand new distribution to enable two-way energy flow.}
 
 % 각각 3가지에 대해서 왜 새로운 GRID mordenization 상황에서 배전망 업그레이드가 필요한지 적자.
 
