--- a/Last_1.tex
+++ b/Last_1.tex
@@ -123,7 +123,9 @@ Gibbs sampling, Stochastic cooperative game theory, Distribution network expansi
 % --------------------- Why we have to forecast the load? 
 
 \subsubsection{Current}
-\textcolor{teal}{The distribution should be expanded to accept the pear-to-pear transaction, distributed generated renewable energy sources (RES), and storage systems. Grid-modernization is weighted and RES penetrates into distribution, that is a post-transmission in decentralized form. In the past, consumers were simply main users of electricity in electricity market, and in the current energy market, where RES penetrated, they were placed in compatible position to produce and sell energy. Since existing unidirectional network cannot accomdate this compatible energy flow, it is necessary to expand new distribution to enable two-way energy flow.}
+\textcolor{teal}{The distribution should be expanded to accept the pear-to-pear transaction, distributed generated renewable energy sources (RES), and storage systems.}
+\textcolor{red}{Grid-modernization (GM) based on decarbonization is activated, and the penetration ratio of RES into distribution is increasing. In distribution, RES enables consumers to produce surplus resources that exceed their demand. Consequently, consumers have become compatible entities capable of selling surplus energy, rather than passive subject that only consume electricity. However, conventionally constructed distribution networks have uni-directional characteristics and are not suitable for embracing new market for GM. 
+In addition, apperance of energy storage has led to concept of electricity transport being removed from physical constraints, and demand shifting in various forms not meshed with criteria demand can be performed inside distribution. For example, arbitrage for charging electricity in a period low retail price and discharging in a high price can be realized, and market can be formed by using storage system in vehicle to grid (V2G). Regardless of market, all forms of energy transactions using energy storage use distribution, but existing networks were installed without reflecting these markets.Therefore, to fully accept GM, new network expansion is required at distribution step.}
 
 % 각각 3가지에 대해서 왜 새로운 GRID mordenization 상황에서 배전망 업그레이드가 필요한지 적자.
 
