--- a/Last_1.tex
+++ b/Last_1.tex
@@ -152,6 +152,10 @@ In addition, apperance of energy storage has led to concept of electricity trans
 
 
 % 전통적인 distribution 또는 내용을 찾기 힘들면 transmission의 확장 방법
+\textcolor{red}{Generally, cost allocation for most networks, including distribution, is determined by demand for peak load period.}
+
+
+
 % 전통적인 distribution expansion plan을 통해서 수요와 신재생에너지 예측이 필요하다는 것을 도출한다.
 \subsubsection{Distribution Expansion Plan}
 \textcolor{magenta}{Generally, the distribution expansion plan can be scheduled to satisfy the maximum load flows.
